Blender crash with Smoke system while iterating color_grid property through python #55115

Closed
opened 2018-05-18 11:10:30 +02:00 by Bogdan Nagirniak · 6 comments

Blender Version
Blender 2.79

Short description of error
Blender crash with Smoke system while iterating domain_settings.color_grid property through python with len = 0

Exact steps for others to reproduce the error

  1. Open smoke_crash.blend file
    smoke_crash.blend
  2. Go to Smoke tab to Divisions entry and change it's value (32 for example)
  3. Go to python console and type following commands:

d = bpy.data.objects['Smoke Domain'].modifiers['Smoke'].domain_settings
len(d.color_grid)

0 // this should be 0

list(d.color_grid) // trying to iterate d.color_grid - this produces crash

Blender crashes.
2018-05-18 (1).png

**Blender Version** Blender 2.79 **Short description of error** Blender crash with Smoke system while iterating domain_settings.color_grid property through python with len = 0 **Exact steps for others to reproduce the error** 1. Open smoke_crash.blend file [smoke_crash.blend](https://archive.blender.org/developer/F3390120/smoke_crash.blend) 2. Go to Smoke tab to Divisions entry and change it's value (32 for example) 3. Go to python console and type following commands: > d = bpy.data.objects['Smoke Domain'].modifiers['Smoke'].domain_settings > len(d.color_grid) 0 // this should be 0 > list(d.color_grid) // trying to iterate d.color_grid - this produces crash Blender crashes. ![2018-05-18 (1).png](https://archive.blender.org/developer/F3390115/2018-05-18__1_.png)
Author
Member

Added subscriber: @bnagirniak

Added subscriber: @bnagirniak

This issue was referenced by 5e7a21a5f5

This issue was referenced by 5e7a21a5f549f5db73385820cafcd8f2bb9c91da
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Brecht Van Lommel was assigned by Philipp Oeser 2018-05-18 13:03:50 +02:00
Member

Think D3396 should do it?

Think [D3396](https://archive.blender.org/developer/D3396) should do it?
Author
Member

Awesome! I checked fix - works ok, thanks!

Awesome! I checked fix - works ok, thanks!
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#55115
No description provided.