Fix T55115: crash when iterating SmokeDomainSettings color_grid property through python